# TM_oop_lab8

./: LICENSE  README.md  pyproject.toml
examples/: barrier_example.py  condition_example.py  event_example.py  semaphore_example.py
tasks/: pipeline_arctan_series.py  task_arctan.py
tests/: test_pipeline_arctan_series.py
