[project]
name = "tm-oop-lab8"
version = "1.0.0"
description = "Лабораторная работа по ООП"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
pythonpath = [".","task","examples"]
