[project]
name = "tm-oop-lab8"
version = "1.0.0"
description = "Лабораторная работа по ООП"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
pythonpath = [".","task","examples"]
